Update Docker image and init settings in compose file

--- a/cu130-slim/docker-compose.yml
+++ b/cu130-slim/docker-compose.yml
@@ -15,8 +15,8 @@ services:
               driver: nvidia
     environment:
       - CLI_ARGS=
-    image: yanwk/comfyui-boot:cu124-slim
-    init: True
+    image: yanwk/comfyui-boot:cu130-slim
+    init: true
     ports:
       - '8188:8188'
     security_opt:
